--- a/SWD392_EventManagement/SWD392_EventManagement/Views/Comments/Delete.cshtml
+++ b/SWD392_EventManagement/SWD392_EventManagement/Views/Comments/Delete.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="CommentId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
