--- a/SWD392_EventManagement/SWD392_EventManagement/Views/Shared/_Layout.cshtml
+++ b/SWD392_EventManagement/SWD392_EventManagement/Views/Shared/_Layout.cshtml
@@ -56,9 +56,13 @@
             </a>
         </div>
         <div class="banner-buttons">
-            <button class="btn btn-primary">Sign In</button>
-            <button class="btn btn-success">Sign Up</button>
-            <button class="btn btn-danger">Sign Out</button>
+            @if (TempData["UserName"] == null)
+            {
+                <button class="btn btn-primary">Sign In</button>
+                <button class="btn btn-success">Sign Up</button>
+            }else{
+                <button class="btn btn-danger">Sign Out</button>
+            }
         </div>
     </div>
     <div class="container">
