--- a/SWD392_EventManagement/SWD392_EventManagement/Views/User/UserProfile.cshtml
+++ b/SWD392_EventManagement/SWD392_EventManagement/Views/User/UserProfile.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Account Information";
+    List<Event> events = ViewBag.ListProfileEvent;
 }
 
 <style>
@@ -121,7 +122,6 @@
 
                 </form>
             </div>
-
         </div>
         @if (TempData["Mess"] != null)
         {
