--- a/SWD392_EventManagement/SWD392_EventManagement/Views/Shared/_Layout.cshtml
+++ b/SWD392_EventManagement/SWD392_EventManagement/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
             {
                 <a href="/Events/ProfileEvent" class="btn btn-primary">My Events</a>
                 <a href="/User/UserProfile" class="btn btn-success">Profile</a>
-                <a href="/SignOut" class="btn btn-danger">Sign Out</a>
+                <a href="/User/LogOut" class="btn btn-danger">Sign Out</a>
             }
         </div>
     </div>
