--- a/SWD392_EventManagement/SWD392_EventManagement/Views/Events/Search.cshtml
+++ b/SWD392_EventManagement/SWD392_EventManagement/Views/Events/Search.cshtml
@@ -92,8 +92,7 @@
         }
         @foreach (var item in events)
         {
-            var image = item.EventDetails.FirstOrDefault().Image;
-            var imageUrl = image + ".jpg";
+            var imageUrl = item.EventDetails.FirstOrDefault().Image;
 
             if (i % 3 == 0)
             {
